fix an editor inducing horizontal scrollbar

--- a/themes/grav/scss/template/_editor.scss
+++ b/themes/grav/scss/template/_editor.scss
@@ -86,6 +86,7 @@
     }
     .grav-editor-modes {
         flex-shrink: 0;
+        margin-right: 2px;
         ul {
             float: right;
         }
